--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "dev": "vite"
     },
     "devDependencies": {
+        "@tailwindcss/postcss": "^4.1.17",
         "@tailwindcss/vite": "^4.0.0",
         "autoprefixer": "^10.4.22",
         "axios": "^1.11.0",
